[project]
name = "eiaa-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.14",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
    "xlrd>=2.0.2",
]
